--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "seamlessly integrate a comment section into your React or Astro project",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "rollup -c --bundleConfigAsCjs",
     "dev": "",
@@ -24,16 +26,16 @@
   "homepage": "https://github.com/atybdot/app-comment-react",
   "dependencies": {
     "appwrite": "^16.0.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "javascript-time-ago": "^2.5.11",
     "lucide-react": "^0.453.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "react-hot-toast": "^2.4.1",
-    "react-time-ago": "^7.3.3",
-    "zustand": "^5.0.0"
+    "react-time-ago": "^7.3.3"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.25.9",
     "@biomejs/biome": "1.9.4",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^28.0.1",
@@ -49,8 +51,7 @@
     "rollup-plugin-dts": "^6.1.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
-    "tailwindcss": "^3.4.14",
-    "@babel/preset-react": "^7.25.9"
+    "tailwindcss": "^3.4.14"
   },
   "publishConfig": {
     "access": "public"
